--- a/flutter_bloc_sqflite/pubspec.yaml
+++ b/flutter_bloc_sqflite/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  supercharged: ^2.1.1
+  intl: ^0.17.0
+  google_fonts: ^3.0.1
+  flutter_bloc: ^8.1.1
+  flutter_spinkit: ^5.1.0
+  font_awesome_flutter: ^10.2.1
+  sqflite: ^2.0.3+1
+  connectivity_plus: ^2.3.7
 
 dev_dependencies:
   flutter_test:
