--- a/flutter_bloc_sqflite/pubspec.yaml
+++ b/flutter_bloc_sqflite/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   sqflite: ^2.0.3+1
   connectivity_plus: ^2.3.7
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
