--- a/flutter_bloc_sqflite/pubspec.yaml
+++ b/flutter_bloc_sqflite/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sqflite: ^2.0.3+1
   connectivity_plus: ^2.3.7
   path_provider: ^2.0.11
+  sqflite_common_ffi: ^2.2.0+1
 
 dev_dependencies:
   flutter_test:
